i added mini banner of project

--- a/index.html
+++ b/index.html
@@ -26,7 +26,21 @@
             <div class="spec"><p>Frontend Developer</p><p>Portfolio</p></div>
         </div>
     </header>
-    <section class="projects"></section>
+    <section class="projects">
+        <div class="carousel-3d" data-gap="90" data-bfc>
+            <figure>
+                <div><a href="#any"><img src="./img/projectUpdate.jpg" alt=""/></a></div>
+                <div><a href="#any"><img src="./img/projectUpdate.jpg" alt=""/></a></div>
+                <div><a href="#any"><img src="./img/projectUpdate.jpg" alt=""/></a></div>
+                <div><a href="#any"><img src="./img/projectUpdate.jpg" alt=""/></a></div>
+                <div><a href="#any"><img src="./img/projectUpdate.jpg" alt=""/></a></div>
+                <div><a href="#any"><img src="./img/projectUpdate.jpg" alt=""/></a></div>
+                <div><a href="#any"><img src="./img/projectUpdate.jpg" alt=""/></a></div>
+                <div><a href="#any"><img src="./img/projectUpdate.jpg" alt=""/></a></div>
+                <div><a href="#any"><img src="./img/projectUpdate.jpg" alt=""/></a></div>
+            </figure>
+            <nav></nav>
+    </section>
     <footer class="footer"></footer>
 </body>
 <script src="./js/sciprt.js"></script>
